# Ecosystem-EPLPORTAL

./: .dockerignore  .gitignore  .gitleaks.toml  Cargo.toml  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
Backend/: .env.example  Cargo.toml  deny.toml
Backend/crates/api-gateway/: Cargo.toml
Backend/crates/api-gateway/src/: branding.rs  error.rs  lib.rs  otp.rs  state.rs
Backend/crates/api-gateway/src/auth/: middleware.rs  mod.rs  permission.rs
Backend/crates/api-gateway/src/middleware/: cors.rs  mod.rs  rate_limit.rs  security_headers.rs
Backend/crates/api-gateway/src/routes/: auth.rs  bookings.rs  bot.rs  branding.rs  locations.rs  mod.rs  otp.rs  portal_users.rs  prices.rs  quick_accept.rs  rules.rs  spx_credentials.rs  spx_login.rs
Backend/crates/api-gateway/tests/: auth_routes.rs  bookings_routes.rs  bot_routes.rs  branding_routes.rs  cors_and_body_limit.rs  locations_routes.rs  otp_module.rs  otp_routes.rs  portal_users_routes.rs  prices_routes.rs  quick_accept_routes.rs  rate_limit.rs  rules_routes.rs  security_headers.rs  session_auth.rs  spx_credentials_routes.rs  spx_login_routes.rs
Backend/crates/core-domain/: Cargo.toml
Backend/crates/core-domain/src/: booking.rs  coc.rs  lib.rs  location.rs  matching.rs  route_parse.rs  rule.rs  vehicle.rs
Backend/crates/executor/: Cargo.toml
Backend/crates/executor/src/: account_lock.rs  agency_dup.rs  dedup.rs  gate.rs  heartbeat.rs  lib.rs  quota.rs  release.rs  restore.rs
Backend/crates/executor/tests/: agency_dup_mock.rs  gate_redis.rs  quota_pg.rs  redis_roundtrip.rs  release_claim.rs  restore_redis.rs
Backend/crates/notifier/: Cargo.toml
Backend/crates/notifier/src/: bot_log.rs  lib.rs  message.rs  push_vapid.rs  waha.rs
Backend/crates/notifier/tests/: bot_log_redis.rs  push_mock.rs  waha_mock.rs
Backend/crates/poller/: Cargo.toml
Backend/crates/poller/src/: antidrift.rs  dispatch.rs  fetch.rs  hedge.rs  lib.rs  login.rs  notif_watch.rs  publish.rs  rules.rs  schedule.rs  state.rs  watchdog.rs
Backend/crates/poller/tests/: antidrift_pg.rs  dispatch_pipeline.rs  fetch_cadence.rs  hedge.rs  login_chain.rs  manual_accept_channel.rs  notif_watch.rs  notifier_wiring.rs  poke_pool_changed.rs  relogin_wiring.rs  restore_before_first_poll.rs  schedule_singleflight.rs  watchdog.rs
Backend/crates/spx-client/: Cargo.toml
Backend/crates/spx-client/src/: accept.rs  booking.rs  client.rs  cookies.rs  lib.rs  login.rs  waha_settings.rs
Backend/crates/spx-client/src/crypto/: envelope.rs  mod.rs  password.rs  quick_token.rs  secret.rs  session_token.rs
Backend/crates/spx-client/tests/: agency_credentials_pg.rs  client_requests.rs  login_mock.rs  master_key_loader.rs  waha_settings_pg.rs
Backend/crates/store/: Cargo.toml
Backend/crates/store/migrations/: 0001_tenants.sql  0002_portal_users.sql  0003_portal_sessions.sql  0004_agency_credentials.sql  0005_accept_rules.sql  0006_rule_booking_targets.sql  0007_bookings.sql  0008_accept_events.sql  0009_notifications.sql  0010_push_subscriptions.sql  0011_automation_settings.sql  0012_site_settings.sql  0013_route_prices.sql  0014_route_locations.sql  0015_archive_runs.sql  0016_rls_policies.sql  0017_tenants_app_role_grant.sql  0018_portal_sessions_lookup_by_hash_fn.sql  0019_app_role_login.sql  0020_bookings_account_id.sql  0021_bookings_spx_derived_columns.sql  0022_retention_role.sql
Backend/crates/store/src/: accept_events.rs  accept_rules.rs  agency_credentials.rs  automation_settings.rs  bookings.rs  lib.rs  pool.rs  portal_sessions.rs  portal_users.rs  quota.rs  retention.rs  route_locations.rs  route_prices.rs  rule_booking_targets.rs  site_settings.rs  tenants.rs
Backend/crates/store/src/models/: accept_event.rs  accept_rule.rs  agency_credential.rs  archive_run.rs  automation_settings.rs  booking.rs  mod.rs  notification.rs  portal_session.rs  portal_user.rs  push_subscription.rs  route_location.rs  route_price.rs  rule_booking_target.rs  site_settings.rs  tenant.rs
Backend/crates/store/tests/: bookings_summary.rs  retention_pg.rs  spx_derived_columns.rs
Backend/crates/ws-hub/: Cargo.toml
Backend/crates/ws-hub/src/: bridge.rs  events.rs  hub.rs  lib.rs
Backend/crates/ws-hub/tests/: events_serde.rs  local_broadcast.rs  redis_bridge.rs  registry_cleanup.rs  session_validated_ws.rs
Docker/: .env.example  Caddyfile  auth-sidecar.Dockerfile  docker-compose.yml  frontend.Dockerfile  reactor-core.Dockerfile  retention.Dockerfile
Docs/: tower-master-spec.md
Docs/superpowers/plans/: 2026-07-13-fase-1-core-domain.md  2026-07-13-fase-2-store-db.md  2026-07-13-fase-3-spx-client-crypto.md  2026-07-13-fase-4-executor.md  2026-07-13-fase-5-poller-notifier-wshub.md  2026-07-15-fase-6a-api-gateway-foundation.md  2026-07-16-fase-6b-spx-creds-otp-gate.md  2026-07-16-fase-6c-bookings-rules.md  2026-07-16-fase-6d-prices-branding-locations-bot.md  2026-07-17-fase-6e-quick-accept-hardening.md  2026-07-17-fase-7a-login-design-foundation.md  2026-07-17-fase-7b-nav-shell-command.md  2026-07-18-command-tickets-ui-revamp.md  2026-07-18-fase-7c-tickets.md  2026-07-18-fase-7d-rules.md  2026-07-18-fase-7e-price.md  2026-07-19-fase-7f-activity.md  2026-07-19-fase-7g-settings-branding.md  2026-07-19-fase-7h-settings-bot.md  2026-07-20-fase-7i-settings-locations.md  2026-07-20-fase-7j-settings-sub-users.md  2026-07-21-fase-7k-settings-spx-credentials.md  2026-07-21-fase-8-deploy-lokal.md  2026-07-21-fase-8-retention.md
Docs/superpowers/specs/: 2026-07-13-fase-0-scaffold-design.md  2026-07-13-fase-1-core-domain-design.md  (+19 more)
Frontend/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
Frontend/src/: app.css  app.html
Frontend/tests/: activity.spec.ts  command.spec.ts  login.spec.ts  price.spec.ts  rules.spec.ts  settings-bot.spec.ts  settings-branding.spec.ts  settings-locations.spec.ts  settings-spx-credentials.spec.ts  settings-sub-users.spec.ts  tickets.spec.ts
OS/: README.md
crates/core-domain/: Cargo.toml
crates/store/: Cargo.toml
docs/: tower-master-spec.md
web/: .dockerignore  Dockerfile
(+82 files in other folders)
