[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.45", features = ["serde"] }
core-domain = { version = "0.1.0", path = "../core-domain" }
executor = { version = "0.1.0", path = "../executor" }
notifier = { version = "0.1.0", path = "../notifier" }
poller = { version = "0.1.0", path = "../poller" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
spx-client = { version = "0.1.0", path = "../spx-client" }
# NOT in the task brief's `cargo add` list, added here because `error.rs`'s
# `impl From<sqlx::Error> for ApiError` needs the `sqlx::Error` type in scope
# — `store` re-exports `sqlx::PgPool` (see its lib.rs comment) but not the
# `sqlx` crate itself, and Rust 2021's extern prelude only exposes DIRECT
# dependencies, not transitive ones. api-gateway still does no raw SQL of its
# own (queries stay in `store`, per this fase's design doc) — this dependency
# exists solely so handlers can `?`-propagate a `store::*` function's
# `Result<_, sqlx::Error>` into `ApiError` via this `From` impl. Pinned to the
# SAME version + feature set `store`'s Cargo.toml already uses so Cargo
# unifies one `sqlx` build across the workspace instead of two.
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots"] }
store = { version = "0.1.0", path = "../store" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.7.0", features = ["cors", "limit"] }
tracing = "0.1.44"
uuid = { version = "1.23.5", features = ["v4", "serde"] }
ws-hub = { version = "0.1.0", path = "../ws-hub" }

[dev-dependencies]
# Route-level `axum::serve` + real HTTP client testing (Task 3's
# `session_auth` test and every later route test in this crate) — plain HTTP
# against 127.0.0.1 only, so no TLS backend is needed.
dashmap = "6.2.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
