[package]
name = "executor"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
core-domain = { version = "0.1.0", path = "../core-domain" }
dashmap = "6.2.1"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager", "script"] }
serde_json = "1.0.150"
spx-client = { version = "0.1.0", path = "../spx-client" }
store = { version = "0.1.0", path = "../store" }
thiserror = "2"
tokio = { version = "1.52.3", features = ["sync", "time"] }
uuid = { version = "1.23.5", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
wiremock = "0.6.5"
