[package]
name = "notifier"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = "0.4.45"
http = "1.4.2"
# `pure-rust` (not the default `boring` backend): `jwt-simple`'s default
# features pull `boring`/`boring-sys`, which links a SECOND BoringSSL build
# (`links = "boringssl"`) alongside the workspace's pinned `wreq` (`btls-sys`)
# below — the same native-lib-conflict class this file's `wreq` comment
# describes. `web-push-native` itself depends on jwt-simple the same way
# (`default-features = false, features = ["pure-rust"]` — verified in its
# published Cargo.toml), so this also keeps our direct dep unified with the
# one pulled in transitively via `web-push-native`.
jwt-simple = { version = "0.12.17", default-features = false, features = ["pure-rust"] }
# Pinned to match `web-push-native` 0.4.0's own `p256 = "0.13.2"` requirement
# (verified in its published Cargo.toml). p256 pre-1.0 minor bumps are
# breaking, so an unpinned `cargo add p256` resolves the newest 0.14.x —
# a DIFFERENT type from web-push-native's `p256::PublicKey`/`p256::SecretKey`
# that would not unify at the `WebPushBuilder::new(...)` call site.
p256 = "=0.13.2"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.44"
# Pinned to the EXACT version already resolved elsewhere in this workspace (poller's
# Cargo.toml) — reuses the one `uuid` crate instance already in the dependency graph
# instead of introducing a second version.
uuid = { version = "1.23.5", features = ["v4"] }
web-push-native = "0.4.0"
# Pinned to the EXACT version spx-client/poller use (=6.0.0-rc.29). Plain
# `cargo add wreq` (unpinned) resolves to the latest stable release (5.3.0),
# which links a different native BoringSSL backend (boring-sys2) than the
# workspace's pinned prerelease (btls-sys) — Cargo rejects two crates in one
# graph linking the same native lib under different versions ("links =
# boringssl" conflict). Pinning here reuses the one wreq/BoringSSL build
# already resolved for spx-client/poller instead of introducing a second one.
# notifier only needs plain POST + JSON body (no cookies/emulation) —
# default-features = false + "json"/"tokio-rt" only.
wreq = { version = "=6.0.0-rc.29", default-features = false, features = ["json", "tokio-rt"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6.5"
