[package]
name = "poller"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = "0.4.45"
core-domain = { version = "0.1.0", path = "../core-domain" }
dashmap = "6.2.1"
executor = { version = "0.1.0", path = "../executor" }
futures = "0.3.32"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
# Pinned to the SAME minor version already used by spx-client's Cargo.toml
# (Fase 3, `crypto::secret`) — reused, not a second/parallel secrecy dep in
# the workspace graph.
secrecy = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
spx-client = { version = "0.1.0", path = "../spx-client" }
store = { version = "0.1.0", path = "../store" }
thiserror = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tracing = "0.1.44"
uuid = { version = "1.23.5", features = ["v4"] }
# Pinned to the EXACT version spx-client uses (=6.0.0-rc.29). Plain `cargo add
# wreq` (unpinned) resolves to the latest stable release (5.3.0), which links
# a different native BoringSSL backend (boring-sys2) than spx-client's pinned
# prerelease (btls-sys) — Cargo rejects two crates in one graph linking the
# same native lib under different versions ("links = boringssl" conflict).
# Pinning here reuses the one wreq/BoringSSL build already resolved for
# spx-client (Fase 3) instead of introducing a second one; `default-features
# = false` matches spx-client's (drops the webpki-roots default, which pulls
# in a deny.toml-incompatible data license).
wreq = { version = "=6.0.0-rc.29", default-features = false, features = ["json", "cookies", "tokio-rt"] }

[dev-dependencies]
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots", "macros", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
wiremock = "0.6.5"
