[package]
name = "spx-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aes-gcm = "0.11"
argon2 = "0.5"
base64 = "0.22"
getrandom = "0.4"
hkdf = "0.13"
secrecy = "0.10"
sha2 = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
