[package]
name = "spx-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aes-gcm = "0.11"
argon2 = "0.5"
base64 = "0.22"
chrono = "0.4"
core-domain = { version = "0.1.0", path = "../core-domain" }
getrandom = "0.4"
hkdf = "0.13"
regex = "1"
secrecy = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots", "macros", "uuid", "chrono"] }
store = { path = "../store" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
