[package]
name = "store"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
core-domain = { version = "0.1.0", path = "../core-domain" }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots", "macros", "migrate", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "test-util"] }
