[package]
name = "ws-hub"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
dashmap = "6.2.1"
futures = "0.3.32"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1.44"

[features]
# Exposes `Hub::test_register` (a direct-registry-insert helper) to
# integration tests in `tests/*.rs`. Those compile the library as an ordinary
# extern crate (NOT under `--cfg test`), so a plain `#[cfg(test)]` item would
# be invisible to them — hence the self dev-dependency below, which unifies
# this feature on for any test target build.
test-helpers = []

[dev-dependencies]
# Task 10's `session_validated_ws.rs`: seeds a real `tenants`/`portal_users`/
# `portal_sessions` row against real Postgres (same pattern as
# `api-gateway/tests/session_auth.rs` and `store`'s own test module) to back
# the `SessionValidator` closure under test with a genuine session, and
# generates its plaintext token via `spx_client`'s real token helper — never
# a hand-rolled/fake token shape.
chrono = "0.4.45"
spx-client = { version = "0.1.0", path = "../spx-client" }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots", "macros", "uuid", "chrono"] }
store = { version = "0.1.0", path = "../store" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = "0.30.0"
uuid = { version = "1.23.5", features = ["v4"] }
ws-hub = { path = ".", features = ["test-helpers"] }
